knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Placement__c/fields/Hours_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Hours_Commitment__c</fullName>
    <description>Monthly hours committed by the candidate.</description>
    <inlineHelpText>Monthly hours committed by the candidate.</inlineHelpText>
    <label>Hours Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>