knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Placement__c/fields/Retention_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Retention_Bonus__c</fullName>
    <label>Retention Bonus</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>