knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Placement__c/fields/Sign_On_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Sign_On_Bonus__c</fullName>
    <label>Sign On Bonus</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>